# csv-diff

./: .gitignore  AGENTS.md  README.md  SKILL.md  makefile  pyproject.toml  ruff.toml
.agent/rules/: coding.md  testing.md
.agent/workflows/: development.md
.github/workflows/: publish.yml  test.yml
docs/examples/: districts-2025.csv  result.diff
src/csvdiff/: cli.py
src/csvdiff/utils/: csv.py  files.py  validation.py
tests/: test_cli.py  test_encoding.py  test_rows_to_csv_lines.py  test_sql_injection.py
tests/utils/: test_csv.py  test_files.py  test_validation.py
