[project]
name = "csvdiff"
version = "0.1.0"
description = "CLI tool for comparing CSV files in git diff format"
authors = [{ name = "fityannugroho" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "typer",
]

[project.scripts]
csvdiff = "csvdiff.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
